/**
 * @Author: zjj
 * @Date: 2025/11/12
 * @Desc: S -> C
**/

syntax = "proto3";

package pb3;

option go_package = "server/internal/protocol";
import "base.proto";
import "player.proto";
import "system.proto";
import "skill_def.proto";
import "attr_def.proto";

enum S2CProtocol{
    S2CError = 0;// 错误消息

    // 账号
    S2CRegister = 1;// 注册账号结果
    S2CLogin = 2;// 登录账号结果
    S2CVerify = 3;// 验证结果
    S2CRoleList = 4;// 角色列表
    S2CCreateRole = 5;// 创建角色结果
    S2CLoginRole = 6;// 登录角色成功
    S2CTimeSync = 7;// 服务器时间同步

    // 移动
    S2CStartMove = 20;// 实体开始移动
    S2CUpdateMove = 21;// 实体移动中更新
    S2CStopMove = 22;// 实体结束移动

    // 场景
    S2CEnterScene = 40;// 进入场景
    S2CEntityAppear = 41;// 实体进入视野
    S2CEntityDisappear = 42;// 实体离开视野

    // 技能
    S2CUseSkill = 60;// 技能释放结果
    S2CSkillDamage = 61;// 技能伤害结果

    // 等级
    S2CLevelData = 80;// 等级数据
}

// =========== 账号 ==========
message S2CRegisterReq {
    bool success = 1;
    string message = 2;
    string token = 3; // 注册成功后返回token
}

message S2CVerifyReq {

}

message S2CLoginReq {
    bool success = 1;
    string message = 2;
    string token = 3; // 登录成功后返回token
}

message S2CRoleListReq {
    repeated PlayerSimpleData role_list = 1;
}

message S2CCreateRoleReq {
    uint32 job = 1;
    uint32 sex = 2;
    string role_name = 3;
}

message S2CLoginRoleReq {
    string reconnect_key = 1;
    PlayerSimpleData role_data = 2;
}

message S2CTimeSyncReq {
    int64 server_time_ms = 1;// 服务器当前时间（Unix 毫秒）
}


// =========== 移动 ==========
// 实体开始移动
message S2CStartMoveReq {
    uint64 entity_hdl = 1; // 实体句柄
    uint32 pos_x = 2;      // 当前位置X坐标（像素坐标）
    uint32 pos_y = 3;      // 当前位置Y坐标（像素坐标）
    MoveData move_data = 4; // 移动数据（包含目的地）
}

// 实体移动中更新
message S2CEntityUpdateMoveReq {

}

message S2CEndMoveReq {
    uint64 entity_hdl = 1; // 实体句柄
    uint32 pos_x = 2;      // 最终位置X坐标（像素坐标）
    uint32 pos_y = 3;      // 最终位置Y坐标（像素坐标）
}
// =========== 场景 ==========
message S2CEnterSceneReq {
    EntitySt entity_data = 4;
}

message S2CEntityAppearReq {
    EntitySt entity = 1;
}

message S2CEntityDisappearReq {
    uint64 entity_hdl = 1;
}


// =========== 技能 ==========
message S2CUseSkillReq {

}

message S2CSkillDamageReq {

}
// =========== 等级 ==========
message S2CLevelDataReq {
    SiLevelData level_data =1;
}
